2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* toc.el: added more debugging info for unknown commands

2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: added support for HTTP proxy
	* tocstr.el: added support for HTTP proxy
	* tnt-proxy.el: (new file) support for HTTP proxy
	* ArtisticLicense.txt: (new file) License file for tnt-proxy.el

2006-02-12  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: added optional mode-line indicator for idleness

2005-09-19  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Made flyspell-mode support much more light-weight

2005-09-18  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: Added support for flyspell-mode
	Turned Emacs/XEmacs read-only code into a function to be reuseable.
	Minor function documentation change to `tnt-fullname-for-nick'.
	Using fullnames in Typing Notifications.
	Make IM/Chat buffer headers read-only from the get-go.

2005-09-07  Joe Casadonte  <jcasadonte@northbound-train.com>
	* tnt.el: added support for Typing Notifications
	* toc.el: added support for Typing Notifications
	* tocstr.el: Fixed gse-debug bug (needed save-excursion).

2005-08-30  Joe Casadonte  <jcasadonte@northbound-train.com>
	* toc.el: Passing in NORMALIZED username into toc-generate-signon-code.

2005-08-29  Scott Evans  <gse@NEVE>

	* tnt.el: Change ports back to 5190.
	Change C-return keybinding to something that seems Emacs/XEmacs
	compatible.
	Change tnt-login-flag-timer to a 1-second value since 0 seconds
	doesn't work on newer XEmacses.
	* toc.el: (toc-get-ascii-value): add for cross-emacs compatibility

2005-08-27  Scott Evans  <gse@SALON>

	* tnt.el: (tnt-save-buddy-list): rewrite, add related helper methods
	(tnt-leave-chat): reorder one bit to work around buffer-setting quirk
	* toc.el: (toc-add-buddies): for TOC2
	(toc-remove-buddies): for TOC2
	(toc-remove-group): for TOC2

2005-08-22  Scott Evans  <gse@antisleep.com>

	* tnt.el: updates for TOC2